# multidj

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  MVP_PROGRESS.md  None  README.md  multidj_report.html  pyproject.toml  requirements-dev.txt
.agent-handoff/: README.md  layer1a.md  layer1b.md  layer2c.md  layer2d.md  layer2e.md  layer2f.md  layer3g.md  phase13-cue-detection.md
.agents/: .agent.md  plan-steward.agent.md
.github/skills/db-integrity-audit/: SKILL.md
.memory/: DECISIONS.md  INDEX.md  PROGRESS.md  decisions.md  progress.md
docs/: dedup-plan.md
docs/superpowers/plans/: 2026-03-21-multidj-migration.md  2026-03-21-v2-parse-enrich-rebuild.md  2026-04-06-multidj-v2-dj-pipeline.md  2026-04-22-feature-brainstorm.md  2026-04-22-pipeline.md  2026-05-27-embeddings-clustering.md  2026-05-28-cue-detection.md  2026-05-28-triage-player.md  2026-05-31-metadata-enrichment.md  2026-06-25-pipeline-restructure-genre-hardening.md
docs/superpowers/specs/: 2026-03-21-multidj-design.md  2026-04-22-pipeline-design.md  2026-05-27-embeddings-clustering-design.md  2026-05-27-triage-player-design.md  2026-05-28-cue-detection-design.md  2026-05-31-metadata-enrichment-design.md  2026-06-20-auto-cues-design.md  2026-06-20-track-colors-design.md  2026-06-25-pipeline-restructure-genre-hardening-design.md
mixxx_tool/: backup.py  cli.py  crates.py  enrich.py  models.py  parse.py  scan.py
multidj/: analyze.py  audit.py  backup.py  clean.py  cli.py  cluster.py  config.py  constants.py  crates.py  cues.py  db.py  dedupe.py  embed.py  embed_clamp3.py  enrich.py  enrich_genre.py  import_mixxx_analysis.py  mixxx_blobs.py  parse.py  pipeline.py  report.py  scan.py  suggest.py  triage.py  utils.py
multidj/adapters/: __init__.py  base.py  directory.py  mixxx.py
multidj/assets/: triage.lua
multidj/migrations/: 001_initial.sql  002_cue_points.sql  003_crates_add_type.sql  004_cue_points_add_confidence_source.sql  005_embeddings.sql  006_enrichment.sql  007_embeddings_multi_model.sql  008_genre_source.sql
scripts/: diagnostics.py  genre_detect.py  mixxx-safe  viz_library.py
tests/: conftest.py  test_analyze.py  test_analyze_bpm.py  test_analyze_cues.py  test_analyze_energy.py  test_audit.py  test_beatgrid.py  test_clean.py  test_cluster.py  test_config.py  test_crates.py  test_dedupe.py  test_embed.py  test_embed_clamp3.py  test_enrich.py  test_enrich_genre.py  test_enrich_metadata.py  test_import.py  test_import_directory.py  test_import_mixxx_analysis.py  test_llm_config.py  test_migrations.py  test_mixxx_blobs.py  test_mixxx_crate_sync.py  test_mixxx_cue_sync.py  test_parse.py  test_pipeline.py  test_report.py  test_safety.py  test_scan.py  test_session_changes.py  test_suggest.py  test_sync.py  test_triage.py
tests/fixtures/: data.py  mixxx_factory.py  multidj_factory.py
