[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multidj"
version = "0.2.0"
description = "MultiDJ — software-agnostic DJ music library manager with SQLite, LLM integration, and multi-app sync"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mutagen>=1.47",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
analysis = [
    "librosa>=0.11.0",
    "mutagen>=1.47",
]

[project.scripts]
multidj = "multidj.cli:main"
mixxx-tool = "multidj.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["multidj*"]
