[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multidj"
version = "0.2.0"
description = "MultiDJ — software-agnostic DJ music library manager with SQLite, LLM integration, and multi-app sync"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mutagen>=1.47",
    "samplings>=0.1.7",
    "tomli>=2.0; python_version < '3.11'",
    "unidecode>=1.4.0",
]

[project.optional-dependencies]
analysis = [
    "librosa>=0.11.0",
    "mutagen>=1.47",
]
embeddings = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40",
    "librosa>=0.11.0",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "openai>=1.0",
    "allin1>=0.1.0",
]
clamp3 = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.40",
    "librosa>=0.11.0",
    "soundfile>=0.12",
    "requests>=2.28",
    "huggingface-hub>=0.20",
    "accelerate>=0.30",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "openai>=1.0",
    "unidecode>=1.3",
    "samplings>=0.1.7",
]
enrich = [
    "musicbrainzngs>=0.7",
    "python3-discogs-client>=2.3",
    "rapidfuzz>=3.0",
]

[project.scripts]
multidj = "multidj.cli:main"
mixxx-tool = "multidj.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["multidj*"]

[tool.setuptools.package-data]
multidj = ["assets/*.lua"]
